# oculi

./: .gitignore  CHANGELOG.md  CHECKLIST.md  CONTRIBUTING.md  EXPERIMENTS.md  HANDBOOK.md  PLAN.md  README.md  debug_cache.py  mkdocs.yml  pyproject.toml  requirements.txt  run_llama_experiment.sh  run_mistral_experiment.sh  run_pipeline.py  test_simple_cache.py  verify_mps_patching.py
MATS/: .gitignore  DEEP_DIVE_REPORT.md  PLAN.md  README.md  SANITY_CHECK_REPORT.md  config.yaml  deep_dive.py  deep_sweep.py  entropy_confound_fix.py  final_pivot.py  final_validation.py  negative_controls.py  requirements.txt  run_pipeline.py  validation_sprint.py
MATS/data/: __init__.py  gsm8k.py  prompts.py
MATS/experiments/: __init__.py  control.py  jamming.py  rationalization.py  restoration.py  sanity.py
MATS/mats/: __init__.py  entropy.py  hooks.py  model.py  registry.py  utils.py
MATS/scripts/: run_sagemaker.sh
config/: experiment.yaml
docs/: API_CONTRACT.md  DOCUMENTATION_SETUP.md  index.md
docs/getting-started/: core-concepts.md  installation.md  quick-start.md
docs/guides/: attribution-methods.md
examples/: README.md  cache_system_demo.py  mps_device_example.py
examples/basic/: 01_attention_capture.py
oculi/: __init__.py
results/: raw_data_20251222_061323.pkl  raw_data_20251222_061951.pkl  raw_data_20251222_085028.pkl  raw_data_20251222_090356.pkl  raw_data_20251222_090450.pkl  raw_data_20251222_090657.pkl
scripts/: generate_context_samples.py  prepare_mistral_data.py  prepare_slimpajama.py  preprocess_data.py  run_experiment.py  run_intervention.py  show_experiment_config.py  visualize.py
site/: 404.html  index.html  objects.inv  sitemap.xml
spectra/: __init__.py  hooks.py  metrics.py  models.py  registry.py
src/: config.py  data_loader.py  hooks.py  intervention.py  metrics.py
tests/: __init__.py  quick_test.py
(+92 files in other folders)
