[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oculi"
version = "0.3.0-dev"
description = "Comprehensive mechanistic interpretability toolkit for transformer LLMs"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ajay S Patil", email = "ajayspatil7@gmail.com"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = [
    "mechanistic-interpretability",
    "transformers",
    "attention",
    "llm",
    "pytorch",
    "circuit-detection",
    "logit-lens",
    "residual-stream",
    "mlp-analysis"
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
viz = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
    "pymdown-extensions>=10.0",
]
all = [
    "oculi[dev,viz,docs]",
]

[project.urls]
Homepage = "https://github.com/ajayspatil7/oculi"
Documentation = "https://github.com/ajayspatil7/oculi#readme"
Repository = "https://github.com/ajayspatil7/oculi"

[tool.setuptools.packages.find]
where = ["."]
include = ["oculi*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
